<resources>
    <string name="app_name">StreamChat</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_an_accunt">Already have an account?<b>SignIn</b></string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female\n</string>
    <string name="add_image">Add Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sent_email">Sent Email</string>
    <string name="add_user">Add User</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="update_profile">Update Profile</string>
    <string name="enable_editing">Enable Editing</string>
    <string name="sent_otp">Sent Otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="update_password">Update Password</string>
    <string name="we_will_send_an_otp_to_given_number_to_reset_your_password">We will send an otp to given number to reset your password</string>
    <string name="_91">+91</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the otp sent to</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="_0123456789">0123456789</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the otp?</string>
    <string name="third_otp_digit">Third OTP digit</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="re_enter_new_password">Re Enter new password</string>
    <string name="reset_password_for">Reset Password for</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verify">Verify</string>
    <string name="we_just_sent_an_sms">We just sent an SMS</string>
    <string name="didn_t_receive_code_resend_00_56">Didn’t receive code?</string>
    <string name="resend_00_56">Resend – 00:56</string>
    <string name="enter_the_security_code_we_sent_to">Enter the security code we sent to</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="full_image_view">Full Image View</string>
</resources>