<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activities.SignupActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- LOGO -->
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/logo" />

            <!-- TITLE -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_a_new_account"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- PROFILE -->
            <FrameLayout
                android:id="@+id/layoutImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/background_image"
                    android:scaleType="centerCrop"
                    app:riv_oval="true" />

                <TextView
                    android:id="@+id/txtAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_image"
                    android:textColor="@color/secondary_text"
                    android:textSize="12sp" />
            </FrameLayout>

            <!-- NAME -->
            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:hint="@string/name"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <!-- EMAIL -->
            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <!-- PHONE -->
            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="16dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <!-- PASSWORD -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/password"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                app:boxBackgroundMode="none"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/primary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/background_input"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="48dp"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- CONFIRM PASSWORD -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                app:boxBackgroundMode="none"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/primary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/background_input"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="48dp"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- RADIO BUTTONS -->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/female" />
            </RadioGroup>

            <!-- SIGNUP BUTTON -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/primary"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="12dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </FrameLayout>

            <!-- GO TO LOGIN -->
            <TextView
                android:id="@+id/txtSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/already_have_an_accunt"
                android:textColor="@color/primary"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
