<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:background="@color/white"
    tools:context=".activities.SigninActivity">

    <!-- TOP GUIDELINE (20% from top) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <!-- LOGO -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/topGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- APP NAME -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- SUBTITLE -->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textSize="14sp"
        android:textColor="@color/primary_text"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EMAIL -->
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/background_input"
        android:hint="@string/email"
        android:drawableStart="@drawable/email"
        android:drawablePadding="16dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary_text"
        android:textColorHint="#546E7A"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- PASSWORD -->
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/background_input"
        android:hint="@string/password"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="16dp"
        android:inputType="textPassword"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- SIGN IN BUTTON + PROGRESSBAR -->
    <FrameLayout
        android:id="@+id/loginFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/primary" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="32dp"
            android:layout_height="32dp"/>
    </FrameLayout>

    <!-- SIGNUP -->
    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/loginFrame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
