<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".activities.OtpVerificationActivity">

    <!-- BACK BUTTON -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/round_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_dark" />

    <!-- TITLE -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/we_just_sent_an_sms"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <!-- SUBTITLE -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/enter_the_security_code_we_sent_to"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/example_gmail_com"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <!-- OTP BOXES -->
    <LinearLayout
        android:id="@+id/otpContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle">

        <!-- 4 OTP Inputs -->
        <EditText
            android:id="@+id/otp1"
            style="@style/otpBox"
            android:background="@color/input_background"
            android:inputType="number"
            android:textColor="@color/primary_text"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/otp2"
            style="@style/otpBox"
            android:background="@color/input_background"
            android:inputType="number"
            android:textColor="@color/primary_text"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/otp3"
            style="@style/otpBox"
            android:background="@color/input_background"
            android:inputType="number"
            android:textColor="@color/primary_text"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/otp4"
            style="@style/otpBox"
            android:background="@color/input_background"
            android:inputType="number"
            android:textColor="@color/primary_text"
            android:textColorHint="#546E7A" />

    </LinearLayout>

    <!-- VERIFY BUTTON -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/primary"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpContainer" />

    <!-- RESEND TEXT -->
    <TextView
        android:id="@+id/resendUpper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/didn_t_receive_code_resend_00_56"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnVerify" />
    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/resend_00_56"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resendUpper" />

</androidx.constraintlayout.widget.ConstraintLayout>
